--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,10 +1,37 @@
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.example.lab2.MainActivity">
-    <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
-        android:title="@string/action_settings"
-        app:showAsAction="never" />
-</menu>
+    <menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
+
+        <item
+            android:id="@+id/menu_item_1"
+            android:icon="@drawable/ic_dad_joke"
+            android:title="Choice 1"
+            app:showAsAction="always"
+            android:orderInCategory="1"
+            android:padding="8dp"
+            />
+        <item
+            android:id="@+id/menu_item_2"
+            android:icon="@drawable/ic_exit"
+            android:title="Choice 2"
+            app:showAsAction="always"
+            android:orderInCategory="2" />
+
+
+
+        <item
+            android:id="@+id/menu_item_home"
+            android:title="Home"
+            app:showAsAction="never"
+            android:orderInCategory="3" />
+        <item
+            android:id="@+id/menu_item_dad_joke"
+            android:icon="@drawable/ic_dad_joke"
+            android:title="Dad Joke"
+            app:showAsAction="never"
+            android:orderInCategory="4" />
+
+        <item
+            android:id="@+id/menu_item_exit"
+            android:title="Exit"
+            app:showAsAction="never"
+            android:orderInCategory="5" />
+    </menu>
